# fast-conventional

./: .editorconfig  .fastconventional.yaml  .mergify.yml  .versio.yaml  .woodpecker.yaml  CHANGELOG.md  Cargo.toml  Dockerfile.bins  Dockerfile.container  Justfile  README.md  cog.toml  nfpm.yaml  renovate.json  utput=-
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.forgejo/workflows/: pipeline.yml
.github/: dependabot.yml
.github/workflows/: pipeline.yml
docs/: cli-usage.md  completion.md  configuration.md  editor.md  validate.md
homebrew/: formula.rb.j2
src/: cli.rs  completion.rs  main.rs  ui.rs
src/commands/: completion.rs  editor.rs  example.rs  mod.rs  validate.rs
src/models/: answers.rs  conventional_commit.rs  fast_conventional_config.rs  mod.rs
src/models/conventional_commit/: body.rs  change.rs  commit.rs  mod.rs  scope.rs  subject.rs  type_slug.rs
src/models/git/: mod.rs  revision_selection.rs  short_ref.rs
src/repositories/: mod.rs
src/repositories/git/: repository.rs
src/service/: commit_validatator.rs  mod.rs
