[package]
name = "fast-conventional"
version = "2.3.25"
edition = "2021"
categories = ["development-tools","command-line-utilities"]
keywords = ["git", "commit_message"]
description = "Make conventional commits, faster, and consistently name scopes"
repository = "https://github.com/PurpleBooth/fast-conventional"
license = "CC0-1.0"
authors = ["Billie Thompson <billie@billiecodes.com>"]

[dependencies]
clap = { version = "4.5.3", features = ["derive", "cargo", "wrap_help", "env", "unicode" ] }
clap_complete = "4.5.1"
git2 = { version = "0.19.0"}
inquire = { version = "0.7.2", features = [ "editor"] }
miette = { version = "7.2.0", features = ["fancy"] }
mit-commit = "3.1.8"
nom = "7.1.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.33"
thiserror = "2.0.0"
[dev-dependencies]
tempfile = "3.10.1"


