[package]
name = "fast-conventional"
version = "2.3.59"
edition = "2021"
categories = ["development-tools","command-line-utilities"]
keywords = ["git", "commit_message"]
description = "Make conventional commits, faster, and consistently name scopes"
repository = "https://github.com/PurpleBooth/fast-conventional"
license = "CC0-1.0"
authors = ["Billie Thompson <billie@billiecodes.com>"]

[dependencies]
clap = { version = "4.5.23", features = ["derive", "cargo", "wrap_help", "env", "unicode" ] }
clap_complete = "4.5.38"
git2 = { version = "0.19.0"}
inquire = { version = "0.7.5", features = [ "editor"] }
miette = { version = "7.4.0", features = ["fancy"] }
mit-commit = "3.2.1"
nom = "7.1.3"
serde = { version = "1.0.215", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "2.0.6"
[dev-dependencies]
tempfile = "3.14.0"


